# cosmosdb-odm

./: README.md  pyproject.toml
src/cosmos_odm/: __init__.py
