[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cosmos-odm"
dynamic = ["version"]
description = "Azure Cosmos DB Core (SQL) ODM with native vector and full-text search"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Cosmos ODM Contributors"},
]
keywords = ["azure", "cosmos", "cosmosdb", "odm", "vector-search", "full-text-search", "nosql"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.11"
dependencies = [
    "azure-cosmos>=4.6.0,<4.8.0",
    "azure-identity>=1.15.0,<2.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "typing-extensions>=4.0.0",
    "aiohttp>=3.8.0,<3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "pre-commit>=3.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "aiohttp>=3.8.0",
    "requests>=2.28.0",  # For emulator health checks
]

[project.urls]
Homepage = "https://github.com/TheovanKraay/cosmos-odm"
Repository = "https://github.com/TheovanKraay/cosmos-odm"
Documentation = "https://github.com/TheovanKraay/cosmos-odm#readme"
Issues = "https://github.com/TheovanKraay/cosmos-odm/issues"

[tool.hatch.version]
path = "src/cosmos_odm/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/cosmos_odm"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "B006",  # do not use mutable default arguments
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["ARG001", "ARG002"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "azure.cosmos.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "unit: Unit tests",
    "integration: Integration tests requiring Cosmos DB",
    "slow: Slow tests",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]